// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No stack pattern release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Setup Node.js
        uses: actions/setup-node@v2.2.0
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v2
        with:
          node-version: 14
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R
          $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt)
          --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode
          -ne 0 ] && ! grep -q \\"Release.tag_name already exists\\" $errout; then
          cat $errout; exit $exitcode; fi
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.ref }}
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: \${{ github.sha }}
      - name: Setup Node.js
        uses: actions/setup-node@v2.2.0
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - if: \${{ matrix.assumeRole == false }}
        name: Configure AWS Credentials
        run: |-
          
          echo \\"AWS_ACCESS_KEY_ID=$accessKeyId\\" >> $GITHUB_ENV
          echo \\"AWS_SECRET_ACCESS_KEY=$secretAccessKey\\" >> $GITHUB_ENV
          echo \\"AWS_REGION=$region\\" >> $GITHUB_ENV
        env:
          accessKeyId: \${{ matrix.accessKeyId }}
          secretAccessKey: \${{ matrix.secretAccessKey }}
          region: \${{ matrix.region }}
      - if: \${{ matrix.assumeRole == true }}
        name: Assume AWS Role
        uses: aws-actions/configure-aws-credentials@v1
        with:
          aws-access-key-id: \${{ matrix.accessKeyId }}
          aws-secret-access-key: \${{ matrix.secretAccessKey }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Deployment
        run: npx projen deploy
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyId: dev-secret-1
            secretAccessKey: dev-secret-2
            region: dev-aws-region-1
            assumeRole: \\"false\\"
          - environment: staging
            accessKeyId: staging-secret-1
            secretAccessKey: staging-secret-2
            region: staging-aws-region-1
            assumeRole: \\"false\\"
        environment:
          - dev
          - staging
"
`;

exports[`assume role with default duration release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v2
        with:
          node-version: 14
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R
          $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt)
          --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode
          -ne 0 ] && ! grep -q \\"Release.tag_name already exists\\" $errout; then
          cat $errout; exit $exitcode; fi
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.ref }}
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: \${{ github.sha }}
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - if: \${{ matrix.assumeRole == false }}
        name: Configure AWS Credentials
        run: |-
          
          echo \\"AWS_ACCESS_KEY_ID=$accessKeyId\\" >> $GITHUB_ENV
          echo \\"AWS_SECRET_ACCESS_KEY=$secretAccessKey\\" >> $GITHUB_ENV
          echo \\"AWS_REGION=$region\\" >> $GITHUB_ENV
        env:
          accessKeyId: \${{ matrix.accessKeyId }}
          secretAccessKey: \${{ matrix.secretAccessKey }}
          region: \${{ matrix.region }}
      - if: \${{ matrix.assumeRole == true }}
        name: Assume AWS Role
        uses: aws-actions/configure-aws-credentials@v1
        with:
          aws-access-key-id: \${{ matrix.accessKeyId }}
          aws-secret-access-key: \${{ matrix.secretAccessKey }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Deployment
        run: npx projen deploy
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyId: dev-secret-1
            secretAccessKey: dev-secret-2
            region: dev-aws-region-1
            assumeRole: \\"true\\"
            roleToAssume: dev-role
            assumeRoleDurationSeconds: \\"300\\"
        environment:
          - dev
"
`;

exports[`assume role with specified duration release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v2
        with:
          node-version: 14
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R
          $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt)
          --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode
          -ne 0 ] && ! grep -q \\"Release.tag_name already exists\\" $errout; then
          cat $errout; exit $exitcode; fi
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.ref }}
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: \${{ github.sha }}
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - if: \${{ matrix.assumeRole == false }}
        name: Configure AWS Credentials
        run: |-
          
          echo \\"AWS_ACCESS_KEY_ID=$accessKeyId\\" >> $GITHUB_ENV
          echo \\"AWS_SECRET_ACCESS_KEY=$secretAccessKey\\" >> $GITHUB_ENV
          echo \\"AWS_REGION=$region\\" >> $GITHUB_ENV
        env:
          accessKeyId: \${{ matrix.accessKeyId }}
          secretAccessKey: \${{ matrix.secretAccessKey }}
          region: \${{ matrix.region }}
      - if: \${{ matrix.assumeRole == true }}
        name: Assume AWS Role
        uses: aws-actions/configure-aws-credentials@v1
        with:
          aws-access-key-id: \${{ matrix.accessKeyId }}
          aws-secret-access-key: \${{ matrix.secretAccessKey }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Deployment
        run: npx projen deploy
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyId: dev-secret-1
            secretAccessKey: dev-secret-2
            region: dev-aws-region-1
            assumeRole: \\"true\\"
            roleToAssume: dev-role
            assumeRoleDurationSeconds: \\"1200\\"
        environment:
          - dev
"
`;

exports[`environment added by invoking the addEnvironments release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Setup Node.js
        uses: actions/setup-node@v2.2.0
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v2
        with:
          node-version: 14
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R
          $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt)
          --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode
          -ne 0 ] && ! grep -q \\"Release.tag_name already exists\\" $errout; then
          cat $errout; exit $exitcode; fi
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.ref }}
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: \${{ github.sha }}
      - name: Setup Node.js
        uses: actions/setup-node@v2.2.0
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - if: \${{ matrix.assumeRole == false }}
        name: Configure AWS Credentials
        run: |-
          
          echo \\"AWS_ACCESS_KEY_ID=$accessKeyId\\" >> $GITHUB_ENV
          echo \\"AWS_SECRET_ACCESS_KEY=$secretAccessKey\\" >> $GITHUB_ENV
          echo \\"AWS_REGION=$region\\" >> $GITHUB_ENV
        env:
          accessKeyId: \${{ matrix.accessKeyId }}
          secretAccessKey: \${{ matrix.secretAccessKey }}
          region: \${{ matrix.region }}
      - if: \${{ matrix.assumeRole == true }}
        name: Assume AWS Role
        uses: aws-actions/configure-aws-credentials@v1
        with:
          aws-access-key-id: \${{ matrix.accessKeyId }}
          aws-secret-access-key: \${{ matrix.secretAccessKey }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Deployment
        run: npx projen deploy
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyId: dev-secret-1
            secretAccessKey: dev-secret-2
            region: dev-aws-region-1
            assumeRole: \\"false\\"
          - environment: staging
            accessKeyId: staging-secret-1
            secretAccessKey: staging-secret-2
            region: staging-aws-region-1
            assumeRole: \\"false\\"
        environment:
          - dev
          - staging
"
`;

exports[`npm config set for each environments release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Setup Node.js
        uses: actions/setup-node@v2.2.0
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v2
        with:
          node-version: 14
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R
          $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt)
          --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode
          -ne 0 ] && ! grep -q \\"Release.tag_name already exists\\" $errout; then
          cat $errout; exit $exitcode; fi
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.ref }}
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: \${{ github.sha }}
      - name: Setup Node.js
        uses: actions/setup-node@v2.2.0
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - if: \${{ matrix.assumeRole == false }}
        name: Configure AWS Credentials
        run: |-
          
          echo \\"AWS_ACCESS_KEY_ID=$accessKeyId\\" >> $GITHUB_ENV
          echo \\"AWS_SECRET_ACCESS_KEY=$secretAccessKey\\" >> $GITHUB_ENV
          echo \\"AWS_REGION=$region\\" >> $GITHUB_ENV
        env:
          accessKeyId: \${{ matrix.accessKeyId }}
          secretAccessKey: \${{ matrix.secretAccessKey }}
          region: \${{ matrix.region }}
      - if: \${{ matrix.assumeRole == true }}
        name: Assume AWS Role
        uses: aws-actions/configure-aws-credentials@v1
        with:
          aws-access-key-id: \${{ matrix.accessKeyId }}
          aws-secret-access-key: \${{ matrix.secretAccessKey }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Setting NPM Config
        env:
          CONFIG_VALUE: \${{ matrix.environment }}
        run: npm config set stage $CONFIG_VALUE
      - name: Deployment
        run: npx projen deploy
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyId: dev-secret-1
            secretAccessKey: dev-secret-2
            region: dev-aws-region-1
            assumeRole: \\"false\\"
          - environment: staging
            accessKeyId: staging-secret-1
            secretAccessKey: staging-secret-2
            region: staging-aws-region-1
            assumeRole: \\"false\\"
        environment:
          - dev
          - staging
"
`;

exports[`specific stack release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v2
        with:
          node-version: 14
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R
          $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt)
          --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode
          -ne 0 ] && ! grep -q \\"Release.tag_name already exists\\" $errout; then
          cat $errout; exit $exitcode; fi
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.ref }}
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: \${{ github.sha }}
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - if: \${{ matrix.assumeRole == false }}
        name: Configure AWS Credentials
        run: |-
          
          echo \\"AWS_ACCESS_KEY_ID=$accessKeyId\\" >> $GITHUB_ENV
          echo \\"AWS_SECRET_ACCESS_KEY=$secretAccessKey\\" >> $GITHUB_ENV
          echo \\"AWS_REGION=$region\\" >> $GITHUB_ENV
        env:
          accessKeyId: \${{ matrix.accessKeyId }}
          secretAccessKey: \${{ matrix.secretAccessKey }}
          region: \${{ matrix.region }}
      - if: \${{ matrix.assumeRole == true }}
        name: Assume AWS Role
        uses: aws-actions/configure-aws-credentials@v1
        with:
          aws-access-key-id: \${{ matrix.accessKeyId }}
          aws-secret-access-key: \${{ matrix.secretAccessKey }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Deployment
        run: npx projen deploy myStack
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyId: dev-secret-1
            secretAccessKey: dev-secret-2
            region: dev-aws-region-1
            assumeRole: \\"false\\"
        environment:
          - dev
"
`;
